syntax = "proto3";

package Combat;

option java_multiple_files = true;
option java_outer_classname = "CombatProto";
option java_package = "com.chocolatada.combat.grpc";

message ProcessCombatRequest {
  int64 player_id = 1;
  int64 enemy_id = 2;
}

message ProcessCombatResponse {
  int64 combat_id = 1;
  bool was_fatal = 2;
  int32 total_turns = 3;
  repeated CombatTurnGrpc turns = 4;
  LootGrpc loot = 5;
}

message CombatTurnGrpc {
  int32 turn_number = 1;
  ActionGrpc player_action = 2;
  ActionGrpc enemy_action = 3;
  StateGrpc player_state_after = 4;
  StateGrpc enemy_state_after = 5;
}

message ActionGrpc {
  TurnActionGrpc turnAction = 1;
  TurnResultGrpc turnResult = 2;
  int64 damage = 3;
  bool critical = 4;
}

enum TurnActionGrpc {
  TURN_ACTION_UNSPECIFIED = 0;
  BASIC_ATTACK = 1;
}

enum TurnResultGrpc {
  TURN_RESULT_UNSPECIFIED = 0;
  HIT = 1;
  MISS = 2;
  CRITICAL_HIT = 3;
  DODGE = 4;
}

message StateGrpc {
  int64 hp = 1;
  int64 stamina = 2;
  int64 accuracy = 3;
  int64 evasion = 4;
}

message LootGrpc {
  int32 gold = 1;
  optional int64 item_id = 2;
}

service CombatService {
  rpc ProcessCombat(ProcessCombatRequest) returns (ProcessCombatResponse);
}
